@@ -6,6 +6,10 @@ https://cyberduck.io/
 - [Bugfix] Failure displaying alert window for multiple consecutive transfer failures
 - [Bugfix] Does not read credentials from the standard AWS SDK credentials file when connecting to AWS GovCloud or AWS China
 - [Bugfix] Checksum verification disabled by default for file transfers
+- [Bugfix] Add --login option to executed shell for "Open in Terminal" feature
+- [Bugfix] Disable transfer acceleration for AWS GovCloud (S3)
+- [Bugfix] Login using temporary tokens from STS to AWS GovCloud (S3) (#10594)
+- [Bugfix] Support auto-configuration from ~/.aws/credentials for AWS GovCloud and Amazon S3 China (S3)
 
 6.9.2
 - [Bugfix] Failure using RSA/ECDSA private in new OpenSSH format (#10552)
